RESOLVED FIXED58868
Reproducible crash two-finger zooming at multiple sites in WebCore::RenderLayer::isTransparent
https://bugs.webkit.org/show_bug.cgi?id=58868
Summary Reproducible crash two-finger zooming at multiple sites in WebCore::RenderLay...
Maciej Stachowiak
Reported 2011-04-19 00:44:36 PDT
Reproducible crash two-finger zooming at multiple sites in WebCore::RenderLayer::isTransparent
Attachments
Patch (1.86 KB, patch)
2011-04-19 00:45 PDT, Maciej Stachowiak
koivisto: review+
Maciej Stachowiak
Comment 1 2011-04-19 00:45:56 PDT
Maciej Stachowiak
Comment 2 2011-04-19 00:47:27 PDT
Maciej Stachowiak
Comment 3 2011-04-20 00:39:43 PDT
Note You need to log in before you can comment on or make changes to this bug.