2011-04-19  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Antti Koivisto.

        Reproducible crash two-finger zooming at multiple sites in WebCore::RenderLayer::isTransparent
        https://bugs.webkit.org/show_bug.cgi?id=58868

        I could not figure out how to make a test.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::paintLayer): Check for existence of a
        parent before calling a method on it.


Canonical link: https://commits.webkit.org/74089@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84349 268f45cc-cd09-0410-ab3c-d52691b4dbfc